// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Component snapshots should match snapshot 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c8 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c8:hover {
  background-color: #e4e8ea;
}

.c5 {
  width: 16px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={false}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={false}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
      title="Don't push me"
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
        title="Don't push me"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            Don't push me
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={false}
              height={9}
              name="caret-down"
              open={false}
              selected={false}
              width={16}
            >
              <Icon__Svg
                className="c4"
                disabled={false}
                fill="#2d3b43"
                height={9}
                open={false}
                selected={false}
                strokeWidth={1}
                width={16}
              >
                <svg
                  className="c4 c5"
                  disabled={false}
                  fill="#2d3b43"
                  open={false}
                  selected={false}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-down"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  ...cause I'm close to the edge
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  I'm trying not to lose my head
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  It's like a jungle sometimes
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  It makes me wonder how I keep from goin' under
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  -- Grandmaster Flash
                </nobr>
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 2`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c8 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c8:hover {
  background-color: #e4e8ea;
}

.c5 {
  width: 16px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(1.5rem - 1px);
  padding-right: calc(1.5rem - 1px);
  padding-top: calc(0.8888888888888888rem - 1px);
  padding-bottom: calc(0.8888888888888888rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={false}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={false}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="large"
      tabIndex={0}
      title="Don't push me"
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="large"
        tabIndex={0}
        title="Don't push me"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            Don't push me
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={false}
              height={9}
              name="caret-down"
              open={false}
              selected={false}
              width={16}
            >
              <Icon__Svg
                className="c4"
                disabled={false}
                fill="#2d3b43"
                height={9}
                open={false}
                selected={false}
                strokeWidth={1}
                width={16}
              >
                <svg
                  className="c4 c5"
                  disabled={false}
                  fill="#2d3b43"
                  open={false}
                  selected={false}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-down"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  ...cause I'm close to the edge
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  I'm trying not to lose my head
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  It's like a jungle sometimes
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  It makes me wonder how I keep from goin' under
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  -- Grandmaster Flash
                </nobr>
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 3`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c8 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c8:hover {
  background-color: #e4e8ea;
}

.c5 {
  width: 16px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={false}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={false}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
      title="Don't push me"
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
        title="Don't push me"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            Don't push me
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={false}
              height={9}
              name="caret-down"
              open={false}
              selected={false}
              width={16}
            >
              <Icon__Svg
                className="c4"
                disabled={false}
                fill="#2d3b43"
                height={9}
                open={false}
                selected={false}
                strokeWidth={1}
                width={16}
              >
                <svg
                  className="c4 c5"
                  disabled={false}
                  fill="#2d3b43"
                  open={false}
                  selected={false}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-down"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem
              onSelect={[Function]}
            >
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  ...cause I'm close to the edge
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem
              onSelect={[Function]}
            >
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  I'm trying not to lose my head
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem
              onSelect={[Function]}
            >
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  It's like a jungle sometimes
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem
              onSelect={[Function]}
            >
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  It makes me wonder how I keep from goin' under
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem
              onSelect={[Function]}
            >
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  -- Grandmaster Flash
                </nobr>
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 4`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c8 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c8:hover {
  background-color: #e4e8ea;
}

.c5 {
  width: 16px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={false}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={false}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
      title="Don't push me"
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
        title="Don't push me"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            Don't push me
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={false}
              height={9}
              name="caret-down"
              open={false}
              selected={false}
              width={16}
            >
              <Icon__Svg
                className="c4"
                disabled={false}
                fill="#2d3b43"
                height={9}
                open={false}
                selected={false}
                strokeWidth={1}
                width={16}
              >
                <svg
                  className="c4 c5"
                  disabled={false}
                  fill="#2d3b43"
                  open={false}
                  selected={false}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-down"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  ...cause I'm close to the edge
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  I'm trying not to lose my head
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  It's like a jungle sometimes
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  It makes me wonder how I keep from goin' under
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  -- Grandmaster Flash
                </nobr>
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 5`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c8 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c8:hover {
  background-color: #e4e8ea;
}

.c5 {
  width: 16px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={false}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={false}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
      title="Don't push me"
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
        title="Don't push me"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            Don't push me
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={false}
              height={9}
              name="caret-down"
              open={false}
              selected={false}
              width={16}
            >
              <Icon__Svg
                className="c4"
                disabled={false}
                fill="#2d3b43"
                height={9}
                open={false}
                selected={false}
                strokeWidth={1}
                width={16}
              >
                <svg
                  className="c4 c5"
                  disabled={false}
                  fill="#2d3b43"
                  open={false}
                  selected={false}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-down"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  ...cause I'm close to the edge
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  I'm trying not to lose my head
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  It's like a jungle sometimes
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  It makes me wonder how I keep from goin' under
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  -- Grandmaster Flash
                </nobr>
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 6`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c5 {
  width: 16px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={false}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={false}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
      title="Push Me"
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
        title="Push Me"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            Push Me
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={false}
              height={9}
              name="caret-down"
              open={false}
              selected={false}
              width={16}
            >
              <Icon__Svg
                className="c4"
                disabled={false}
                fill="#2d3b43"
                height={9}
                open={false}
                selected={false}
                strokeWidth={1}
                width={16}
              >
                <svg
                  className="c4 c5"
                  disabled={false}
                  fill="#2d3b43"
                  open={false}
                  selected={false}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-down"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <nobr>
              You can place any content you prefer here.
            </nobr>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 7`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c8 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c8:hover {
  background-color: #e4e8ea;
}

.c5 {
  width: 16px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
  border-color: #e05f6e;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c1:focus,
.c1:hover {
  border-color: #e05f6e;
  box-shadow: 0 0 2px #e05f6e inset;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={false}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={false}
      invalid={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
      title="Don't push me"
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
        title="Don't push me"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            Don't push me
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={false}
              height={9}
              name="caret-down"
              open={false}
              selected={false}
              width={16}
            >
              <Icon__Svg
                className="c4"
                disabled={false}
                fill="#2d3b43"
                height={9}
                open={false}
                selected={false}
                strokeWidth={1}
                width={16}
              >
                <svg
                  className="c4 c5"
                  disabled={false}
                  fill="#2d3b43"
                  open={false}
                  selected={false}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-down"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  ...cause I'm close to the edge
                </nobr>
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 8`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c8 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c8:hover {
  background-color: #e4e8ea;
}

.c5 {
  width: 11px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={false}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={false}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
      title="Push Me"
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
        title="Push Me"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            Push Me
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={false}
              height={9}
              name="caret-selected"
              open={false}
              selected={true}
              width={11}
            >
              <Icon__Svg
                className="c4"
                disabled={false}
                fill="#30c0b8"
                height={9}
                open={false}
                selected={true}
                strokeWidth={1}
                width={11}
              >
                <svg
                  className="c4 c5"
                  disabled={false}
                  fill="#30c0b8"
                  open={false}
                  selected={true}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-selected"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                Check that checkmark
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 9`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  max-width: 100%;
}

.c5 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c7 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c7:hover {
  background-color: #e4e8ea;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  width: 1rem;
  height: 1rem;
  border: calc(1rem / 10) solid #146292;
  border-left-color: rgba(20,98,146,0.25);
  border-radius: 100%;
  -webkit-animation: kOBPdp 1s linear infinite;
  animation: kOBPdp 1s linear infinite;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c6 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={false}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={false}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
      title="Something is happening"
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
        title="Something is happening"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            Something is happening
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <SpinnerFontSizeBase>
              <WithTheme(LoadingSpinner)
                size="1rem"
              >
                <LoadingSpinner__StyledSpinner
                  color="#146292"
                  gapColor="rgba(20, 98, 146, 0.25)"
                  size="1rem"
                  speed="1s"
                >
                  <span
                    className="c4"
                    color="#146292"
                    size="1rem"
                    speed="1s"
                  />
                </LoadingSpinner__StyledSpinner>
              </WithTheme(LoadingSpinner)>
            </SpinnerFontSizeBase>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c5"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c6"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem>
              <div
                className="c7"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                Hold on I'm loading
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 10`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: none;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c8 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c8:hover {
  background-color: #e4e8ea;
}

.c5 {
  width: 16px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #e4e8ea;
  border: solid 1px #e4e8ea;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #949ea3;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={true}
  fluid={false}
>
  <span
    className="c0"
    disabled={true}
  >
    <Dropdown__DropdownButton
      disabled={true}
      fluid={false}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
      title="Select"
    >
      <div
        className="c1"
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
        title="Select"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            Select
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={true}
              height={9}
              name="caret-down"
              open={false}
              selected={false}
              width={16}
            >
              <Icon__Svg
                className="c4"
                disabled={true}
                fill="#c1c7cb"
                height={9}
                open={false}
                selected={false}
                strokeWidth={1}
                width={16}
              >
                <svg
                  className="c4 c5"
                  disabled={true}
                  fill="#c1c7cb"
                  open={false}
                  selected={false}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-down"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                I'll never be seen
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 11`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c8 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c8:hover {
  background-color: #e4e8ea;
}

.c5 {
  width: 16px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={false}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={false}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            <h3>
              h3 label
            </h3>
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={false}
              height={9}
              name="caret-down"
              open={false}
              selected={false}
              width={16}
            >
              <Icon__Svg
                className="c4"
                disabled={false}
                fill="#2d3b43"
                height={9}
                open={false}
                selected={false}
                strokeWidth={1}
                width={16}
              >
                <svg
                  className="c4 c5"
                  disabled={false}
                  fill="#2d3b43"
                  open={false}
                  selected={false}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-down"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                Hey there
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 12`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: block;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c8 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c8:hover {
  background-color: #e4e8ea;
}

.c5 {
  width: 16px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(-180deg);
  -ms-transform: rotateX(-180deg);
  transform: rotateX(-180deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={false}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={false}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
      title="Select"
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
        title="Select"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            Select
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={false}
              height={9}
              name="caret-down"
              open={true}
              selected={false}
              width={16}
            >
              <Icon__Svg
                className="c4"
                disabled={false}
                fill="#2d3b43"
                height={9}
                open={true}
                selected={false}
                strokeWidth={1}
                width={16}
              >
                <svg
                  className="c4 c5"
                  disabled={false}
                  fill="#2d3b43"
                  open={true}
                  selected={false}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-down"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={true}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  You can't close me
                </nobr>
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 13`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c8 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c8:hover {
  background-color: #e4e8ea;
}

.c5 {
  width: 16px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={false}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={false}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
      title="You can't open me"
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
        title="You can't open me"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            You can't open me
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={false}
              height={9}
              name="caret-down"
              open={false}
              selected={false}
              width={16}
            >
              <Icon__Svg
                className="c4"
                disabled={false}
                fill="#2d3b43"
                height={9}
                open={false}
                selected={false}
                strokeWidth={1}
                width={16}
              >
                <svg
                  className="c4 c5"
                  disabled={false}
                  fill="#2d3b43"
                  open={false}
                  selected={false}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-down"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem>
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  You will never see me
                </nobr>
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;

exports[`Dropdown Component snapshots should match snapshot 14`] = `
.c0 {
  display: inline-block;
  position: relative;
  pointer-events: initial;
  width: 100%;
  max-width: 100%;
}

.c6 {
  position: absolute;
  display: none;
  z-index: 10;
  top: 100%;
  left: 0;
  margin: 0.25rem 0 0 0;
  min-width: 100%;
}

.c8 {
  padding: 0.625rem 1rem;
  color: #556269;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  cursor: pointer;
  outline: 0 none;
}

.c8:hover {
  background-color: #e4e8ea;
}

.c5 {
  width: 16px;
  height: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 240px;
  max-width: 100%;
  width: 100%;
  background-color: #ffffff;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  font-family: inherit;
  font-size: 0.875rem;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  color: #2d3b43;
  cursor: pointer;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
}

.c1:focus,
.c1:hover {
  outline: none;
  box-shadow: 0 0 2px #146292 inset;
  border-color: #146292;
}

.c2 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.1428571428571428;
  text-align: left;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
}

.c7 {
  background-color: #ffffff;
  min-width: 100%;
  max-height: 384px;
  padding: 0.5rem 0;
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  overflow: auto;
}

.c3 {
  width: 24px;
  -webkit-flex: 0 0 24px;
  -ms-flex: 0 0 24px;
  flex: 0 0 24px;
  text-align: right;
  font-size: 0;
  margin-left: 0.5rem;
}

<ToggleMenu__TriggerWrapper
  className={null}
  disabled={false}
  fluid={true}
>
  <span
    className="c0"
    disabled={false}
  >
    <Dropdown__DropdownButton
      disabled={false}
      fluid={true}
      invalid={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      role="button"
      size="normal"
      tabIndex={0}
      title="Don't push me"
    >
      <div
        className="c1"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
        title="Don't push me"
      >
        <Dropdown__Label>
          <span
            className="c2"
          >
            Don't push me
          </span>
        </Dropdown__Label>
        <Dropdown__IconWrapper>
          <div
            className="c3"
          >
            <Dropdown__StyledIcon
              disabled={false}
              height={9}
              name="caret-down"
              open={false}
              selected={false}
              width={16}
            >
              <Icon__Svg
                className="c4"
                disabled={false}
                fill="#2d3b43"
                height={9}
                open={false}
                selected={false}
                strokeWidth={1}
                width={16}
              >
                <svg
                  className="c4 c5"
                  disabled={false}
                  fill="#2d3b43"
                  open={false}
                  selected={false}
                  strokeWidth={1}
                >
                  <use
                    xlinkHref="/iconsprite.svg#icon-caret-down"
                  />
                </svg>
              </Icon__Svg>
            </Dropdown__StyledIcon>
          </div>
        </Dropdown__IconWrapper>
      </div>
    </Dropdown__DropdownButton>
    <ToggleMenu__MenuWrapper
      left="0"
      margin="0.25rem 0 0 0"
      top="100%"
      visible={false}
    >
      <div
        className="c6"
      >
        <Dropdown__DropdownPanel
          lastInteractionKeyboard={false}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onMouseMove={[Function]}
        >
          <div
            className="c7"
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseMove={[Function]}
          >
            <DropdownItem
              onSelect={[Function]}
            >
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  ...cause I'm close to the edge
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem
              onSelect={[Function]}
            >
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  I'm trying not to lose my head
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem
              onSelect={[Function]}
            >
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  It's like a jungle sometimes
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem
              onSelect={[Function]}
            >
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  It makes me wonder how I keep from goin' under
                </nobr>
              </div>
            </DropdownItem>
            <DropdownItem
              onSelect={[Function]}
            >
              <div
                className="c8"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              >
                <nobr>
                  -- Grandmaster Flash
                </nobr>
              </div>
            </DropdownItem>
          </div>
        </Dropdown__DropdownPanel>
      </div>
    </ToggleMenu__MenuWrapper>
  </span>
</ToggleMenu__TriggerWrapper>
`;
